--- a/test-compose/ui/Dockerfile
+++ b/test-compose/ui/Dockerfile
@@ -2,6 +2,11 @@ FROM tier/grouper:latest
 
 LABEL author="tier-packaging@internet2.edu <tier-packaging@internet2.edu>"
 
+# test Java commands are in path for builders of downstream containers
+RUN keytool
+
+
 #COPY in custom css, images, etc
+
 
 CMD ["ui"]
