--- a/container_files/tier-support/supervisord-base.conf
+++ b/container_files/tier-support/supervisord-base.conf
@@ -3,7 +3,7 @@ logfile=/tmp/logsuperd                               ; supervisord log file
 logfile_maxbytes=0                           ; maximum size of logfile before rotation
 loglevel=error                                  ; info, debug, warn, trace
 nodaemon=true                                  ; run supervisord as a daemon
-user=root                                       ; default user
+user=tomcat                                       ; default user
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
